[package]
name = "lifering"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Hash wrapper around floats."
readme = "README.md"
homepage = "https://github.com/lunir-project/lifering"
repository = "https://github.com/lunir-project/lifering"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
